--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@ body {
   font-weight: 300;
   color: rgb(6, 6, 75);
   background-color: #fff;
-
+  overflow: auto;
 }
 
 html {
   width: 100%;
   height: 100%;
-
+  overflow:hidden;
 }
 
 h1,
