--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,12 @@ body {
   font-weight: 300;
   color: rgb(6, 6, 75);
   background-color: #fff;
-  overflow: auto;
+  
 }
 
 html {
   width: 100%;
   height: 100%;
-  overflow:hidden;
 }
 
 h1,
@@ -356,8 +355,10 @@ hr {
 
 .boxed-grey {
   background: rgb(244, 244, 245);
-  padding: 20px;
+  padding-top: 20px;
   border-radius: 10px;
+  box-shadow:0 0.27778rem 0.27778rem 0 rgba(0,0,0,.2);
+  min-height: 150px;
 
 }
 
@@ -721,7 +722,7 @@ Parallax
   height: 350px;
   width:100%;
   border-radius:20px;
-  box-shadow:1px 1px 10px lightblue;
+  box-shadow:0 0.27778rem 0.27778rem 0 rgba(0,0,0,.2);
 }
 
 .btn-skin:hover,
