--- a/css/style.css
+++ b/css/style.css
@@ -358,7 +358,7 @@ hr {
   padding-top: 20px;
   border-radius: 10px;
   box-shadow:0 0.27778rem 0.27778rem 0 rgba(0,0,0,.2);
-/*   min-height: 100px; */
+  min-height: 100px;
 
 }
 
@@ -486,6 +486,7 @@ form#contact-form textarea:focus {
 
 .widget-contact {
   text-align: left;
+  padding:32px;
 }
 
 .company-social {
