--- a/color/default.css
+++ b/color/default.css
@@ -3,7 +3,7 @@ a,.tp-caption a.btn:hover {
 	color: #67b0d1;
 }
 .top-nav-collapse {
-	background: #4285F4;
+	background-color: #4082ec73 !important;
 }
 
 .navbar-custom ul.nav ul.dropdown-menu li a:hover {
